# QTPy2040-serprog

./: CMakeLists.txt  main.c  readme.md  usb_descriptors.c
